--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,13 @@
-<div class="center hero-unit">
-	<h1>Welcome to Gossiips</h1>
-	<p>
-		Gossip anonymously, and listen to gossips.
-	</p>
-	<p>
-		<%= link_to "Sign Up", "#", class: "btn btn-large btn-primary" %>
-	</p>
-</div>
+<% if user_signed_in? %>
+	<h1>You're logged in.</h1>
+<% else %>
+	<div class="center hero-unit">
+		<h1>Welcome to Gossiips</h1>
+		<p>
+			Gossip anonymously, and listen to gossips.
+		</p>
+		<p>
+			<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-large btn-primary" %>
+		</p>
+	</div>
+<% end %>
