add communities scaffold again

--- a/app/views/communities/_community.html.erb
+++ b/app/views/communities/_community.html.erb
@@ -1,6 +1,8 @@
 <tr>
-  <td><%= community.description %></td>
-  <td><%= link_to 'Show', community %></td>
-  <td><%= link_to 'Edit', edit_community_path(community) %></td>
-  <td><%= link_to 'Destroy', community, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<td><%= community.description %></td>
+	<td><%= community.category %></td>
+	<td><%= community.location %></td>
+	<td><%= link_to 'Show', community %></td>
+	<td><%= link_to 'Edit', edit_community_path(community) %></td>
+	<td><%= link_to 'Destroy', community, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
