--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,9 +1,11 @@
-<h1>Communities</h1>
+<h1>Listing communities</h1>
 
 <table class="table table-striped">
   <thead>
     <tr>
       <th>Description</th>
+      <th>Category</th>
+      <th>Location</th>
       <th></th>
       <th></th>
       <th></th>
