--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -1,9 +1,11 @@
-<%= simple_form_for(@community, html: { class: "form-horizontal"}) do |f| %>
+<%= simple_form_for(@community, html: {class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
-
+  
   <%= f.input :description %>
+  <%= f.input :category, collection: ["School", "Organization", "Company", "Place", "Society", "Interest"] %>
+  <%= f.input :location, collection: ["Hong Kong"] %>
 
   <div class="form-actions">
-    <%= f.button :submit, class: "btn btn-primary" %>
+    <%= f.button :submit, class: "btn btn-primary"%>
   </div>
 <% end %>
