--- a/app/views/communities/_community.html.erb
+++ b/app/views/communities/_community.html.erb
@@ -5,4 +5,5 @@
 	<td><%= link_to 'Show', community %></td>
 	<td><%= link_to 'Edit', edit_community_path(community) %></td>
 	<td><%= link_to 'Destroy', community, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<td><%= link_to 'Join', join_community_path(community) %></td>
 </tr>
