--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing communities</h1>
+<h1>Communities</h1>
 
 <table class="table table-striped">
   <thead>
@@ -6,6 +6,7 @@
       <th>Description</th>
       <th>Category</th>
       <th>Location</th>
+      <th></th>
       <th></th>
       <th></th>
       <th></th>
