--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -15,5 +15,10 @@
   <%= @community.location %>
 </p>
 
+<p>
+  <strong>People:</strong>
+  <%= @community.users.size %>
+</p>
+
 <%= link_to 'Edit', edit_community_path(@community) %> |
 <%= link_to 'Back', communities_path %>
