add user profile

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,11 +11,12 @@
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li>    
-                            <%= link_to 'About',  about_path %>
+                            <%= link_to 'Communities', communities_path %>
                         </li>
                     </ul>
                     <ul class="nav pull-right">
                                 <% if user_signed_in? %>
+                                  <li><%= link_to 'My Communities', user_path(current_user) %></li>
                                   <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
                                   <li><%= link_to 'Logout',  destroy_user_session_path, method: :delete %></li>
                                 <% else %>
