--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,9 @@
 <% if user_signed_in? %>
 	<h1>You're logged in.</h1>
+	<p>
+		<strong>Communities:</strong>
+		<%= current_user.communities.size %>
+	</p>
 <% else %>
 	<div class="center hero-unit">
 		<h1>Welcome to Gossiips</h1>
