--- a/app/views/communities/_community.html.erb
+++ b/app/views/communities/_community.html.erb
@@ -1,9 +1,6 @@
 <tr>
-	<td><%= community.description %></td>
+	<td><%= link_to community.description, community %></td>
 	<td><%= community.category %></td>
 	<td><%= community.location %></td>
-	<td><%= link_to 'Show', community %></td>
-	<td><%= link_to 'Edit', edit_community_path(community) %></td>
-	<td><%= link_to 'Destroy', community, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 	<td><%= link_to 'Join', join_community_path(community) %></td>
 </tr>
