add post user community association

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,9 @@
                         <li>    
                             <%= link_to 'Communities', communities_path %>
                         </li>
+                        <li>
+                            <%= link_to 'Posts', posts_path %>
+                        </li>
                     </ul>
                     <ul class="nav pull-right">
                                 <% if user_signed_in? %>
