--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,8 @@
 <%= simple_form_for(@post, html: {class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
 
-  <%= f.input :description, as: :text, input_html: { rows: "3"} %>
+    <%= f.input :description, as: :text, input_html: { rows: "3"} %>
+    <%= f.association :community, label_method: :description %>
 
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-primary" %>
