--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,10 @@
-<h1>Listing posts</h1>
+<h1>Posts</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Description</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Community</th>
     </tr>
   </thead>
 
