--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
     <%= f.input :description, as: :text, input_html: { rows: "3"} %>
-    <%= f.association :community, label_method: :description %>
+    <%= f.association :community, collection: current_user.communities, label_method: :description, include_blank: false %>
 
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-primary" %>
