--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
 
 			<p>
 			  <strong>Community:</strong>
-			  <%= @post.community_id %>
+			  <%= @post.community.description %>
 			</p>
 
 			<%= link_to 'Back', posts_path %>
