--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @user.email %></h1>
+<h2>My Communities</h2>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -11,5 +12,19 @@
 
   <tbody>
     <%= render @communities %>
+  </tbody>
+</table>
+<h2>My Posts</h2>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Description</th>
+      <th>Community</th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <%= render @posts %>
   </tbody>
 </table>
