add paperclip and amazon s3

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,5 @@
 <tr>
+	<td><%= image_tag post.image(:medium) %></td>
   <td><%= link_to post.description, post %></td>
   <td><%= link_to post.community.description, post.community %></td>
 </tr>
