--- a/app/views/newsfeeds/show.html.erb
+++ b/app/views/newsfeeds/show.html.erb
@@ -5,6 +5,7 @@
     <table class="table table-striped">
       <thead>
         <tr>
+          <th>Image</th>
           <th>Description</th>
           <th>Community</th>
           <th></th>
