--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,11 @@
 <%= simple_form_for(@post, html: {class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
+  <%= f.full_error :image_file_size, class: "alert alert-error" %>
+  <%= f.full_error :image_content_type, class: "alert alert-error" %>
 
-    <%= f.input :description, as: :text, input_html: { rows: "3"} %>
-    <%= f.association :community, collection: current_user.communities, label_method: :description, include_blank: false %>
+	<%= f.input :image, label: "Upload an image" %>
+  <%= f.input :description, as: :text, input_html: { rows: "3"} %>
+  <%= f.association :community, collection: current_user.communities, label_method: :description, include_blank: false %>
 
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-primary" %>
