--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
 <div class="footer">
-	<small>
-		<%= link_to 'About',  about_path %>
-	</small>
+	<div class="navbar navbar-fixed-bottom">
+		<small>
+			<%= link_to 'About',  about_path %>
+		</small>
+	</div>
 </div>
