--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,3 +1,4 @@
+<%= image_tag @community.cover %>
 <p>
   <strong>Description:</strong>
   <%= @community.description %>
@@ -18,9 +19,12 @@
   <%= @community.users.size %>
 </p>
 
+<%= link_to 'Join', join_community_path(@community) %>
+
 <table class="table table-striped">
   <thead>
     <tr>
+      <th>Image</th>
       <th>Description</th>
       <th>Community</th>
       <th></th>
