--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,5 @@
-<h1>Posts</h1>
+<div class="span5 offset2">
+  <%= render @posts %>
+  <%= will_paginate @posts %>
+</div>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-    	<th>Image</th>
-      <th>Description</th>
-      <th>Community</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <%= render @posts %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
