--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,10 @@
 <div class="row">
 	<div class="span6 offset3">
 		<div class="well">
-			<%= image_tag @post.image %>
+			<% if @post.image.present? %> 
+				<%= image_tag @post.image %>
+			<% else %>
+			<% end %>
 			<p>
 			  <strong>Description:</strong>
 			  <%= @post.description %>
@@ -9,10 +12,14 @@
 
 			<p>
 			  <strong>Community:</strong>
-			  <%= @post.community.description %>
+			  <%= link_to @post.community.description, @post.community %>
 			</p>
 
 			<%= link_to 'Back', posts_path %>
+			<% if current_user == @post.user %>
+				| <%= link_to 'Edit', edit_post_path(@post) %> | 
+				<%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+			<% end %>
 		</div>
 	</div>
 </div>
