--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,16 @@
 <div class="row">
-	<div class="span6 offset3">
-		<div class="well">
+	<div class="span6 offset1">
+		<div class="box">
 			<% if @post.image.present? %> 
 				<%= image_tag @post.image %>
 			<% else %>
 			<% end %>
 			<p>
-			  <strong>Description:</strong>
 			  <%= @post.description %>
 			</p>
 
 			<p>
-			  <strong>Community:</strong>
+			  @
 			  <%= link_to @post.community.description, @post.community %>
 			</p>
 
