--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -5,8 +5,8 @@
   
   <%= f.input :cover, label: "Upload an image" %>
   <%= f.input :description %>
-  <%= f.input :category, collection: ["School", "Organization", "Company", "Place", "Society", "Interest"], include_blank: false %>
-  <%= f.input :location, collection: ["Hong Kong"], include_blank: false %>
+  <%= f.association :category, collection: @categories, label_method: :description, value_method: :id, include_blank: false %>
+  <%= f.association :location, collection: @locations, label_method: :description, value_method: :id, include_blank: false %>
 
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-primary"%>
