--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
                             <%= link_to 'Latest', posts_path %>
                         </li>
                         <li>    
-                            <%= link_to 'Communities', communities_path %>
+                            <%= link_to 'Communities', categories_path %>
                         </li>
 
                     </ul>
