--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center hero-unit">
   <h1>Welcome to Gossiips</h1>
   <p>
-    Gossip anonymously, and listen to gossips.
+    Gossip in the world of communities.
   </p>
   <p>
     <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-large btn-primary" %>
