--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,9 +14,8 @@
 			  <%= link_to @post.community.description, @post.community %>
 			</p>
 
-			<%= link_to 'Back', posts_path %>
 			<% if current_user == @post.user %>
-				| <%= link_to 'Edit', edit_post_path(@post) %> | 
+				<%= link_to 'Edit', edit_post_path(@post) %> | 
 				<%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
 			<% end %>
 		</div>
