--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="span6 offset1">
-    <h2>My Posts</h2>
+    <h2>My Gossips</h2>
     <%= render @posts %>
   </div>
 
