add new community button

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,6 @@
 <div class="span6 offset1">
-<h1>Discover Communities</h1>
-<%= render @categories %>
+	
+	<h1>Discover Communities</h1>
+	<%= link_to 'New Community', new_community_path %>
+	<%= render @categories %>
 </div>
