--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,11 +18,24 @@
 					<%= link_to '<i class="icon-heart"></i>'.html_safe, votefor_post_path(@post), :method => :post %>
 					<%= @post.upvotes.size %>
 				</p>
+				<p>
+					<%= link_to '<i class="icon-comment"></i>'.html_safe, @post %>
+					<%= @post.comments.size-1 %>
+				</p>
 
 			<% if current_user == @post.user %>
 				<%= link_to 'Edit', edit_post_path(@post) %> | 
 				<%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
 			<% end %>
+
+			<%= simple_form_for [@post, @comment] do |f| %>
+			  <%= f.input :comment, as: :text, input_html: { rows: "3"} %>
+			  <%= f.button :submit, class: "btn btn-primary" %>
+			<% end %>
+
+			<%= render 'comments/show' %>
+			<%= will_paginate @comments %>
+
 		</div>
 	</div>
 </div>
