temp remove auto load comment

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,10 +32,13 @@
 			  <%= f.input :comment, as: :text, input_html: { rows: "3"} %>
 			  <%= f.button :submit, class: "btn btn-primary" %>
 			<% end %>
-
-			<%= render 'comments/show' %>
-			<%= will_paginate @comments %>
+			<div class="comments">
+				<%= render @comments %>
+				<%= will_paginate @comments %>
+			</div>
 
 		</div>
+
+
 	</div>
 </div>
