--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,6 @@
 <div class="span6 offset1">
-  <%= render @posts %>
-  <%= will_paginate @posts %>
+		<div id='posts' >
+	  	<%= render @posts %>
+		</div>
+		<%= will_paginate @posts %>
 </div>
-
