--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-             <%= link_to "Gossiips", root_path, class: "brand" %>
+             <%= link_to "Secret Angel", root_path, class: "brand" %>
 
                 <div class="nav-collapse">
                     <ul class="nav">
@@ -20,9 +20,11 @@
                     </ul>
                     <ul class="nav pull-right">
                                 <% if user_signed_in? %>
-                                  <li><%= link_to 'My Profile', users_show_path %></li>
-                                  <li><%= link_to 'Settings', edit_user_registration_path %></li>
-                                  <li><%= link_to 'Logout',  destroy_user_session_path, method: :delete %></li>
+                                    <li><%= link_to '<i class="icon-edit icon-white"></i>'.html_safe, new_post_path %></li>
+                                  <li><%= link_to '<i class="icon-user icon-white"></i>'.html_safe, users_show_path %></li>
+                                  <li><%= link_to '<i class="icon-envelope icon-white"></i>'.html_safe, conversations_path %></li>
+                                  <li><%= link_to '<i class="icon-cog icon-white"></i>'.html_safe, edit_user_registration_path %></li>
+                                  <li><%= link_to '<i class="icon-off icon-white"></i>'.html_safe,  destroy_user_session_path, method: :delete %></li>
                                 <% else %>
                                   <li><%= link_to 'Login',  new_user_session_path %></li>
                                 <% end %>
