--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,5 +1,7 @@
+<div class="box">
 <h1>New community</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', communities_path %>
+<%= link_to 'Back', categories_path %>
+</div>
