--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New post</h1>
+<div class="box">
+	<h1>Share a Secret...</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+	<%= link_to 'Back', root_path %>
+</div>
