--- a/app/views/newsfeeds/show.html.erb
+++ b/app/views/newsfeeds/show.html.erb
@@ -9,7 +9,7 @@
     </div>
     <%= will_paginate @posts %>
   </div>
-  <div class="span3 offset1">
+  <div class="span3 offset1 visible-desktop">
     <%= render 'layouts/sidebar' %>
   </div>
 </div>
