--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     <%= will_paginate @posts %>
   </div>
 
-  <div class="span3 offset1">
+  <div class="span3 offset1 visible-desktop">
     <h1>My Communities</h1>
     <%= render @communities %>
   </div>
