--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -70,6 +70,17 @@ body {
 
 }
 
+.boxunread {
+	margin: 5px;
+	padding: 5px;
+	font-size: 11px;
+	line-height: 1.4em;
+	float: left;
+	box-shadow: 1px 1px 5px #444;
+	width: 95%;
+	background: red;
+}
+
 .box img {
 	display: block;
 	width: 100%;
