--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
 			</p>
 
 			<div id="actions">
-					<%= social_share_button_tag(@post.description) %>
+					<%= social_share_button_tag(@post.description, :url =>"#{request.protocol}#{request.host_with_port}#{request.fullpath}") %>
 					<%= link_to '@ ' + @post.community.description, @post.community, :class => 'btn' %>
 
 				<div class="alignright">
