--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -8,6 +8,9 @@
       <p>
         <%= @community.intro %>
       </p>
+      <p>
+        <%= social_share_button_tag(@community.description) %>
+      </p>
       <p class="alignright">
         <%= link_to 'Join/Leave', join_community_path(@community), :class => 'btn'%>
       </P>
