--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,7 @@
-<div class="span6 offset1">
-	<h1>Discover Communities</h1>
-	<%= link_to 'Create Community', new_community_path, :class => 'btn btn-primary' %>
-	<%= render @categories %>
+<div class="row-fluid">
+	<div class="span8">
+		<h1>Discover Communities</h1>
+		<%= link_to 'Create Community', new_community_path, :class => 'btn btn-primary' %>
+		<%= render @categories %>
+	</div>
 </div>
