--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,10 +1,10 @@
-<div class="span6 offset1">
-  <h1>Communities</h1>
-  <%= link_to 'New Community', new_community_path %>
-  	<div id="communities">
-        <%= render @communities %>       
-      </div>  
-  <%= will_paginate @communities %>
+<div class="row-fluid">
+	<div class="span8">
+	  <h1>Communities</h1>
+	  <%= link_to 'New Community', new_community_path %>
+	  	<div id="communities">
+	        <%= render @communities %>       
+	      </div>  
+	  <%= will_paginate @communities %>
+	</div>
 </div>
-
-
