--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,15 +19,26 @@
 
                     </ul>
                     <ul class="nav pull-right">
-                                <% if user_signed_in? %>
-                                    <li><%= link_to '<i class="icon-edit icon-white"></i>'.html_safe, new_post_path %></li>
-                                  <li><%= link_to '<i class="icon-user icon-white"></i>'.html_safe, users_show_path %></li>
-                                  <li><%= link_to '<i class="icon-envelope icon-white"></i>'.html_safe, conversations_path %></li>
-                                  <li><%= link_to '<i class="icon-cog icon-white"></i>'.html_safe, edit_user_registration_path %></li>
-                                  <li><%= link_to '<i class="icon-off icon-white"></i>'.html_safe,  destroy_user_session_path, method: :delete %></li>
-                                <% else %>
-                                  <li><%= link_to 'Login',  new_user_session_path %></li>
-                                <% end %>
+                      
+                      <% if user_signed_in? %>
+                        <li class="dropdown">
+                          <a class="dropdown-toggle"
+                             data-toggle="dropdown"
+                             href="#">
+                              My Account
+                              <b class="caret"></b>
+                            </a>
+                          <ul class="dropdown-menu">
+                            <li><%= link_to "Me", users_show_path %></li>
+                            <li><%= link_to "Messages", conversations_path %></li>
+                            <li><%= link_to "Settings", edit_user_registration_path %></li>
+                            <li><%= link_to "Logout",  destroy_user_session_path, method: :delete %></li>
+                          </ul>
+                        </li>
+                          <li><%= link_to '<i class="icon-edit icon-white"></i>'.html_safe, new_post_path %></li>
+                      <% else %>
+                        <li><%= link_to 'Login',  new_user_session_path %></li>
+                      <% end %>
                     </ul>
                 </div>
         </div>
