--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,18 +5,19 @@
 	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	  <%= csrf_meta_tags %>
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <%= tag :meta, name: "viewport", content: "width=device-width, initial-scale=1.0" %>
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
 		<div class="container">
+
 			<% flash.each do |name, msg| %>
 				<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
 			<% end %>
 			<%= yield %>
-			
+			<%= render 'layouts/footer' %>
 		</div>
-		<%= render 'layouts/footer' %>
+		
 	</body>
 </html>
