--- a/app/views/newsfeeds/show.html.erb
+++ b/app/views/newsfeeds/show.html.erb
@@ -1,5 +1,6 @@
-<div class="row">
-  <div class="span6 offset1">
+<div class="row-fluid">
+  <div class="span8">
+
       <% if @notifications > 0 %>
         <div class="well">You have <%= @notifications %> new message(s).</div>
         <% else %>
@@ -14,7 +15,8 @@
     </div>
     <%= will_paginate @posts %>
   </div>
-  <div class="span3 offset1 visible-desktop">
+  <div class="span4 visible-desktop">
+
     <%= render 'layouts/sidebar' %>
   </div>
 </div>
