--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
-<div class="span6 offset1">
-		<div id='posts' >
-	  	<%= render @posts %>
-		</div>
-		<%= will_paginate @posts %>
+<div class="row-fluid">
+	<div class="span8">
+			<div id='posts' >
+		  	<%= render @posts %>
+			</div>
+			<%= will_paginate @posts %>
+	</div>
 </div>
