--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
-<div class="row">
-	<div class="span6 offset1">
+<div class="row-fluid">
+	<div class="span8">
 		<div class="box">
 			<% if @post.image.present? %> 
 				<%= image_tag @post.image %>
