--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
             </a>
              <%= link_to "Secret Angel", root_path, class: "brand" %>
 
-                <div class="nav-collapse">
+                <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li>
                             <%= link_to 'Latest', posts_path %>
@@ -21,6 +21,9 @@
                     <ul class="nav pull-right">
                       
                       <% if user_signed_in? %>
+                      
+                      
+                        <ul class="nav">
                         <li class="dropdown">
                           <a class="dropdown-toggle"
                              data-toggle="dropdown"
@@ -35,7 +38,10 @@
                             <li><%= link_to "Logout",  destroy_user_session_path, method: :delete %></li>
                           </ul>
                         </li>
-                          <li><%= link_to '<i class="icon-edit icon-white"></i>'.html_safe, new_post_path %></li>
+                      </ul>
+                      <li><%= link_to '<i class="icon-edit icon-white"></i>'.html_safe, new_post_path %></li>
+                      
+                          
                       <% else %>
                         <li><%= link_to 'Login',  new_user_session_path %></li>
                       <% end %>
