test facebook share

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 	  <%= csrf_meta_tags %>
 	  <%= tag :meta, name: "viewport", content: "width=device-width, initial-scale=1.0" %>
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+		<%= content_for?(:head) ? yield(:head) : '' %>
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
