--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,9 @@
+<% content_for :head do %>
+  <meta property="og:title"  content="Sample" /> 
+  <meta property="og:description" content="@post.description" />
+  <meta property="og:image"  content="https://fbstatic-a.akamaihd.net/images/devsite/attachment_blank.png" /> 
+<% end %>
+
 <div class="row-fluid">
 	<div class="span8">
 		<div class="box">
