--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,7 @@
 			<p>
 			  <%= @post.description %>
 			</p>
+			<%= link_to 'Share on Facebook', 'http://www.facebook.com/sharer.php?u='+request.original_url, :target => :blank %>
 			<p>
 				<% if current_user == @post.user %>
 					<%= link_to 'Edit', edit_post_path(@post) %> | 
