--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,15 @@
 	<html>
 	<head>
 	  <title>Secret Angel</title>
+	  <% if content_for?(:head) %>
+		  <%= yield(:head) %>
+		<% end %>
 	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	  <%= csrf_meta_tags %>
 	  <%= tag :meta, name: "viewport", content: "width=device-width, initial-scale=1.0" %>
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-		<%= content_for?(:head) ? yield(:head) : '' %>
+		
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
