test facebook share 4

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :head do %>
-  <meta property="og:title"  content="Sample" /> 
-  <meta property="og:description" content="@post.description" />
-  <meta property="og:image"  content="https://fbstatic-a.akamaihd.net/images/devsite/attachment_blank.png" /> 
+  <meta property="og:title" content="title" />
+	<meta property="og:description" content="description" />
+	<meta property="og:image" content="thumbnail_image" />
 <% end %>
 
 <div class="row-fluid">
