test facebook share 5

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,7 @@
   <meta property="og:title" content="title" />
 	<meta property="og:description" content="description" />
 	<meta property="og:image" content="thumbnail_image" />
+	<meta property="og:url"    content="<%= "http://gossiips.herokuapp.com" + post_path(@post) %>" />
 <% end %>
 
 <div class="row-fluid">
